
*****

Cosmetics.


*****  Sun Feb 28 12:37:05 CET 2021  *****

Fixed some extra typos (besides those corrected by astromancer).

*****

Propagated typo corrections into the docs.

*****

Updated link of license badge to point to RTD docs. 


*****  Sat Jun 12 19:01:21 CEST 2021  *****

In bm.remove_dubplicates() added additional check for DOI after
identical ISBN values in case the entries refer to different chapters
of a same book.
Added respective tests.

*****

Small tweak to docs (put latest tutorial video first).

*****

Bumped bibmanager to version 1.3.4

*****

Added mock_init to test_duplicate_isbn_same_unknown_doi() tests
because the code needs the config file initialized to set the screen
output style.


*****  Mo 14. Jun 09:15:32 CEST 2021  *****

Fixed bug from latest isbn check.

*****

Bumped bibmanager to version 1.3.5


*****  Fr 18. Jun 17:26:05 CEST 2021  *****

Specified the encoding='utf-8' whenever the code opens a file
in text mode.


*****  Di 22. Jun 10:13:15 CEST 2021  *****

Bumped bibmanager to version 1.3.6


*****  So 15. Aug 18:36:33 CEST 2021  *****

Added tag meta property to Bib() objects.
Tests are TBD.


*****  Sat Sep 11 20:38:17 -03 2021  *****

Refactored get_current_key() to search entry boundaries by blanks
instead of by the at character.
Refactored browser expand's command to always include blank lines
around expanded entries. Remove the blanks when collapsing (and
leaving keys next to each other).

*****

Added meta content into expanded entries (shown above) content.


*****  Fri Sep 17 17:38:21 -03 2021  *****

Added LastKeyCompleter and LastKeySuggestCompleter to implement
a dynamic autocomplete according to the latest key found in the
input text.
Added BM_HISTORY_TAGS constant to keep history of tag searches.

*****

Changed default tags value from None to [].

*****

Implemented cli_tag() and prompt_search_tags() to enable
adding/removing tags from the command line.
Some documentation is TBD.